Add mermaid.js, remove mermaid codeblocks from <pre> tags, styles

--- a/website/assets/styles/pages/docs/code-blocks.less
+++ b/website/assets/styles/pages/docs/code-blocks.less
@@ -1,6 +1,6 @@
 // lesshint-disable spaceAroundComma, trailingWhitespace
 
-  code:not(.hljs):not(.nohighlight) {
+  code:not(.hljs):not(.nohighlight):not(.mermaid) {
     background-color: @ui-off-white;
     border: 1px solid @border-lt-gray;
     color: @core-fleet-black-75;
