add custom codeblock renderer, remove jquery unwrapping, hide mermaid blocks until fully rendered

--- a/website/assets/styles/pages/docs/code-blocks.less
+++ b/website/assets/styles/pages/docs/code-blocks.less
@@ -15,6 +15,9 @@
     border-radius: 6px;
   }
 
+  code.mermaid:not([data-processed="true"]) {
+    opacity: 0;
+  }
 
   pre:not(.algolia-autocomplete):not(.ds-dropdown-menu):not(.json) {
     padding: 24px;
