--- a/website/assets/styles/pages/docs/code-blocks.less
+++ b/website/assets/styles/pages/docs/code-blocks.less
@@ -15,7 +15,7 @@
     border-radius: 6px;
   }
 
-  code.mermaid:not([data-processed="true"]) {
+  code.mermaid:not([data-processed='true']) {
     opacity: 0;
   }
 
