--- a/website/views/layouts/layout.ejs
+++ b/website/views/layouts/layout.ejs
@@ -237,6 +237,7 @@
     <script src="/dependencies/cloud.js"></script>
     <script src="/dependencies/docsearch.min.js"></script>
     <script src="/dependencies/highlight.min.js"></script>
+    <script src="/dependencies/mermaid.min.js"></script>
     <script src="/dependencies/moment.js"></script>
     <script src="/dependencies/parasails.js"></script>
     <script src="/js/cloud.setup.js"></script>
@@ -247,7 +248,6 @@
     <script src="/js/components/modal.component.js"></script>
     <script src="/js/components/stripe-card-element.component.js"></script>
     <script src="/js/utilities/open-stripe-checkout.js"></script>
-    <script src="/js/mermaid.min.js"></script>
     <script src="/js/pages/account/account-overview.page.js"></script>
     <script src="/js/pages/account/edit-password.page.js"></script>
     <script src="/js/pages/account/edit-profile.page.js"></script>
