created custom tooltip component

--- a/frontend/index.scss
+++ b/frontend/index.scss
@@ -3,6 +3,6 @@
 @import "styles/helpers.scss";
 @import "styles/var/**/*.scss";
 @import "styles/global/**/*.scss";
-@import "components/**/*.scss";
+@import "components/**/**/*.scss";
 @import "layouts/**/*.scss";
 @import "pages/**/**/*.scss";
