Add support for mermaid diagrams to fleetdm.com/docs (#4288)
* Add mermaid.js, remove mermaid codeblocks from <pre> tags, styles

* add custom codeblock renderer, remove jquery unwrapping, hide mermaid blocks until fully rendered

* update comment

* layout update

* Add section to the handbook about mermaid code blocks, add mermaid styles to handbook

* Update handbook/community.md

* Update handbook/community.md

Co-authored-by: Mike Thomas <78363703+mike-j-thomas@users.noreply.github.com>

--- a/website/assets/styles/pages/docs/code-blocks.less
+++ b/website/assets/styles/pages/docs/code-blocks.less
@@ -1,6 +1,6 @@
 // lesshint-disable spaceAroundComma, trailingWhitespace
 
-  code:not(.hljs):not(.nohighlight) {
+  code:not(.hljs):not(.nohighlight):not(.mermaid) {
     background-color: @ui-off-white;
     border: 1px solid @border-lt-gray;
     color: @core-fleet-black-75;
@@ -15,6 +15,9 @@
     border-radius: 6px;
   }
 
+  code.mermaid:not([data-processed='true']) {
+    opacity: 0;
+  }
 
   pre:not(.algolia-autocomplete):not(.ds-dropdown-menu):not(.json) {
     padding: 24px;
