--- a/frontend/pages/queries/QueryPage/_styles.scss
+++ b/frontend/pages/queries/QueryPage/_styles.scss
@@ -124,6 +124,9 @@
         img {
           max-width: 12px;
         }
+        .plus-icon {
+          padding-right: 3px;
+        }
         .selector-name {
           margin-left: 8px;
           font-size: $x-small;
@@ -153,9 +156,14 @@
   &__targets-total-count {
     margin-left: 16px;
     font-size: $x-small;
+    display: flex;
 
     span {
       font-weight: 700;
+    }
+
+    .icon-tooltip {
+      margin-left: $pad-small;
     }
   }
   &__page-loading {
