--- a/website/views/pages/homepage.ejs
+++ b/website/views/pages/homepage.ejs
@@ -20,7 +20,7 @@
                     <p class="d-inline-block">
                       <strong>Live Q&A session</strong>
                       <br class="d-lg-none d-block">
-                      Feb 22nd, 2022 2:30pm (CST)
+                      March 1st, 2022 2:30pm (CST)
                     </p>
                   </div>
                   <div purpose="demo-cta-form" class="flex-grow-1 col-12 col-sm-auto px-0 pt-sm-0">
