Hide software hosts count column for team filter

--- a/frontend/pages/software/ManageSoftwarePage/_styles.scss
+++ b/frontend/pages/software/ManageSoftwarePage/_styles.scss
@@ -230,6 +230,9 @@
         .id__header {
           width: 180px;
         }
+        .vulnerabilities__header:nth-last-child(2) {
+          border-right: 0;
+        }
       }
 
       tbody {
