--- a/frontend/pages/schedule/ManageSchedulePage/components/ScheduleListWrapper/_styles.scss
+++ b/frontend/pages/schedule/ManageSchedulePage/components/ScheduleListWrapper/_styles.scss
@@ -77,6 +77,11 @@
   .queries-table__performance-impact-tooltip {
     font-weight: 400;
   }
+  
+  .column-with-tooltip {
+    position: relative;
+    top: 8px;
+  }
 }
 
 .no-schedule {
