tooltip for automations; spacing for form input

--- a/frontend/components/forms/FormField/_styles.scss
+++ b/frontend/components/forms/FormField/_styles.scss
@@ -12,6 +12,10 @@
       font-weight: $bold;
       color: $core-vibrant-red;
     }
+
+    &[data-has-tooltip="true"] {
+      margin-bottom: $pad-small;
+    }
   }
 
   &__hint {
