user form; fixed input with icon component

--- a/frontend/components/forms/fields/InputFieldWithIcon/_styles.scss
+++ b/frontend/components/forms/fields/InputFieldWithIcon/_styles.scss
@@ -56,9 +56,14 @@
   }
 
   &__label {
+    display: block;
     font-size: $x-small;
     font-weight: $bold;
     margin-bottom: $pad-xsmall;
+
+    &[data-has-tooltip="true"] {
+      margin-bottom: $pad-small;
+    }
   }
 
   &__errors {
