--- a/frontend/pages/admin/UserManagementPage/components/UserForm/_styles.scss
+++ b/frontend/pages/admin/UserManagementPage/components/UserForm/_styles.scss
@@ -53,7 +53,7 @@
     color: $core-fleet-black;
     font-size: $x-small;
     font-weight: $bold;
-    margin-bottom: $pad-xsmall;
+    margin-bottom: $pad-small;
   }
 
   &__user-permissions-info {
