replaced many more tooltips with new version

--- a/frontend/pages/software/ManageSoftwarePage/_styles.scss
+++ b/frontend/pages/software/ManageSoftwarePage/_styles.scss
@@ -158,6 +158,9 @@
     }
   }
   &__count {
+    display: flex;
+    align-items: center;
+    
     .count-error {
       color: $ui-error;
     }
