--- a/frontend/pages/policies/PolicyPage/components/QueryResults/_styles.scss
+++ b/frontend/pages/policies/PolicyPage/components/QueryResults/_styles.scss
@@ -8,47 +8,19 @@
   &__text-wrapper {
     margin-top: 20px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     font-size: $x-small;
+
+    span {
+      font-weight: $bold;
+    }
 
     span:not(:last-of-type) {
       margin-bottom: $pad-small;
     }
-  }
 
-  &__text-online {
-    &:before {
-      background-color: $ui-success;
-      border-radius: 100%;
-      content: " ";
-      display: inline-block;
-      height: 8px;
-      margin-right: $pad-small;
-      width: 8px;
-    }
-  }
-
-  &__text-offline {
-    &:before {
-      background-color: $ui-fleet-black-25;
-      border-radius: 100%;
-      content: " ";
-      display: inline-block;
-      height: 8px;
-      margin-right: $pad-small;
-      width: 8px;
-    }
-  }
-
-  &__text-error {
-    &:before {
-      background-color: $ui-error;
-      border-radius: 100%;
-      content: " ";
-      display: inline-block;
-      height: 8px;
-      margin-right: $pad-small;
-      width: 8px;
+    .icon-tooltip {
+      margin-left: $pad-small;
     }
   }
 
@@ -75,5 +47,42 @@
       position: relative;
       top: -2px;
     }
+  }
+
+  .table-container {
+    &__header {
+      display: none;
+    }
+  }
+
+  .data-table__wrapper {
+    overflow-x: scroll;
+  }
+
+  .data-table-container .data-table thead th {
+    min-width: 140px;
+    padding-left: 0px;
+    padding-right: $pad-large;
+    border-right: 0;
+
+    &:first-of-type {
+      padding-left: $pad-large;
+    }
+  }
+
+  .data-table-container .data-table tbody td {
+    padding-left: 0px;
+    padding-right: $pad-large;
+
+    &:first-of-type {
+      padding-left: $pad-large;
+    }
+  }
+
+  &__results-count,
+  &__error-count {
+    font-size: $x-small;
+    font-weight: $bold;
+    margin-right: $pad-medium;
   }
 }
