Allow enter to call remove or delete for all remove/delete modals

--- a/frontend/pages/queries/ManageQueriesPage/components/RemoveQueryModal/_styles.scss
+++ b/frontend/pages/queries/ManageQueriesPage/components/RemoveQueryModal/_styles.scss
@@ -3,7 +3,7 @@
 
   &__btn-wrap {
     display: flex;
-    justify-content: row-reverse;
+    justify-content: flex-end;
     margin-top: $pad-xxlarge;
   }
 
