Create/edit duplicate label name error works, fix Ace error color

--- a/frontend/components/FleetAce/_styles.scss
+++ b/frontend/components/FleetAce/_styles.scss
@@ -1,17 +1,13 @@
 .fleet-ace {
   &__label {
     height: 25px;
-    margin-bottom: $pad-small;
+    margin-bottom: $pad-xsmall;
     display: flex;
     align-items: center;
-    
-    p {
-      font-size: $x-small;
-      font-weight: $bold;
-      color: $core-fleet-black;
-      margin: 0;
-      flex: 1;
-    }
+    font-size: $x-small;
+    font-weight: $bold;
+    color: $core-fleet-black;
+
     &--error {
       color: $ui-error;
     }
