--- a/website/assets/styles/pages/homepage.less
+++ b/website/assets/styles/pages/homepage.less
@@ -115,7 +115,7 @@
   [purpose='demo-cta'] {
     padding: 16px;
     background: rgba(25, 33, 71, 0.5);
-    border-radius: 12px;
+    border-radius: 16px;
     [purpose='demo-cta-text' ] {
       white-space: nowrap;
       p {
@@ -127,7 +127,9 @@
     }
     .form-control {
       height: 44px;
-      padding: 4px 4px 4px 16px;
+      padding: 4px 4px 4px 12px;
+      border: none;
+      border-radius: 6px;
       input {
         border: none;
         height: 36px;
@@ -170,8 +172,8 @@
     [purpose='register-button'] {
       padding: 8px 16px;
       font-size: 14px;
-      line-height: 19.1px;
-      height: 35px;
+      line-height: 20px;
+      height: 36px;
       border-radius: 4px;
       min-width: 87px;
     }
