add image dimensions to filename

--- a/website/views/pages/homepage.ejs
+++ b/website/views/pages/homepage.ejs
@@ -38,7 +38,7 @@
                 <p class="text-center">Thank you for registering.<br class="d-sm-none d-block"> Please check your inbox for event details.</p>
               </div>
             </div>
-            <img alt="Fleet ctl terminal and Fleet UI" src="/images/fleetctl@2x.png" style="max-width: 810px; height: auto;" class="w-100 py-3 py-sm-5 mx-auto" />
+            <img alt="Fleet ctl terminal and Fleet UI" src="/images/fleetctl-687x506@2x.png" style="max-width: 810px; height: auto;" class="w-100 py-3 py-sm-5 mx-auto" />
           </div>
         </div>
       </div>
