--- a/website/assets/styles/bootstrap-overrides.less
+++ b/website/assets/styles/bootstrap-overrides.less
@@ -101,13 +101,13 @@ a.text-danger:hover, a.text-danger:focus {
     }
     &.disabled, &:disabled {
       color: #fff;
-      background-color: darken(#ff5c83, 10%), 0.25;
-      border-color: darken(#ff5c83, 10%), 0.25;
+      background-color: darken(#ff5c83, 10%);
+      border-color: darken(#ff5c83, 10%);
     }
     &:not(:disabled):not(.disabled):active, &:not(:disabled):not(.disabled).active, .show > &.dropdown-toggle {
       color: #fff;
-      background-color: darken(#ff5c83, 10%), 0.25;
-      border-color: darken(#ff5c83, 10%), 0.25;
+      background-color: darken(#ff5c83, 10%);
+      border-color: darken(#ff5c83, 10%);
     }
     &:not(:disabled):not(.disabled):active:focus, &:not(:disabled):not(.disabled).active:focus, .show > &.dropdown-toggle:focus {
       box-shadow: 0 0 0.25rem 0.2rem #ff5c83;
