--- a/frontend/pages/queries/ManageQueriesPage/components/QueriesListWrapper/_styles.scss
+++ b/frontend/pages/queries/ManageQueriesPage/components/QueriesListWrapper/_styles.scss
@@ -41,6 +41,12 @@
   .queries-table__performance-impact-tooltip {
     font-weight: 400;
   }
+
+  .column-with-tooltip {
+    height: 0;
+    position: relative;
+    top: -10px;
+  }
 }
 
 .no-queries {
