--- a/frontend/components/queries/PackQueriesListWrapper/_styles.scss
+++ b/frontend/components/queries/PackQueriesListWrapper/_styles.scss
@@ -48,4 +48,10 @@
   .queries-table__performance-impact-tooltip {
     font-weight: 400;
   }
+
+  .column-with-tooltip {
+    height: 0;
+    position: relative;
+    top: -10px;
+  }
 }
